--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,3 @@
-sdk.dir=/Users/suryaprataprathore/Library/Android/sdk
-flutter.sdk=/Users/suryaprataprathore/Development/flutter
+sdk.dir=C:\\Users\\PREDATOR\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\PREDATOR\\Documents\\flutter
 flutter.versionName=0.0.2
